--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -15,5 +15,7 @@
 <body>
   <div id="root"></div>
   <script src="%PUBLIC_URL%/assets/videos/intro.mp4"></script>
+  <script src="https://checkout.flutterwave.com/v3.js"></script>
+
 </body>
 </html>
