--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,19 +3,63 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Highbridge Homes</title>
+  
+  <title>Highbridge Homes - Real Estate & Property Investments in Nigeria</title>
+  <meta name="description" content="Highbridge Homes offers premium real estate and property investment opportunities in Nigeria. Buy land, homes, and commercial properties with ease.">
+  <meta name="keywords" content="Highbridge Homes, Real Estate Nigeria, Buy Land in Nigeria, Property Investment, Luxury Homes, Affordable Housing">
+  <meta name="author" content="Highbridge Homes">
+  <meta name="robots" content="index, follow">
+  
+  <!-- Open Graph for social media -->
+  <meta property="og:title" content="Highbridge Homes - Real Estate & Property Investments">
+  <meta property="og:description" content="Discover the best real estate deals in Nigeria with Highbridge Homes. Secure your dream property today.">
+  <meta property="og:image" content="%PUBLIC_URL%/assets/images/highbridge-logo.png">
+  <meta property="og:url" content="https://www.highbridgehomes.com">
+  
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Highbridge Homes - Real Estate & Property Investments">
+  <meta name="twitter:description" content="Find the best real estate investment opportunities in Nigeria. Buy affordable and luxury properties.">
+  <meta name="twitter:image" content="%PUBLIC_URL%/assets/images/highbridge-logo.png">
+  
+  <!-- Favicon -->
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico">
+  
+  <!-- Stylesheets -->
   <link rel="stylesheet" href="%PUBLIC_URL%/assets/styles/global.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-  <link
-  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-  rel="stylesheet"
-/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+  
+  <!-- Sitemap and Robots.txt for SEO -->
+  <link rel="sitemap" type="application/xml" title="Sitemap" href="https://www.highbridgehomes.com/sitemap.xml">
+  <meta name="robots" content="index, follow">
+  
+  <!-- Structured Data for SEO -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "RealEstateAgent",
+      "name": "Highbridge Homes",
+      "url": "https://www.highbridgehomes.com",
+      "logo": "https://www.highbridgehomes.com/assets/images/highbridge-logo.png",
+      "description": "Highbridge Homes offers premium real estate and property investment opportunities in Nigeria.",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "123 Highbridge Avenue",
+        "addressLocality": "Lagos",
+        "addressRegion": "LA",
+        "postalCode": "100001",
+        "addressCountry": "NG"
+      },
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "telephone": "+234-815-288-6218",
+        "contactType": "customer service"
+      }
+    }
+    </script>
 </head>
 <body>
   <div id="root"></div>
-  <script src="%PUBLIC_URL%/assets/videos/intro.mp4"></script>
   <script src="https://checkout.flutterwave.com/v3.js"></script>
-
 </body>
 </html>
